syntax = "proto3";

package overlock.overlock;

import "amino/amino.proto";
import "cosmos/msg/v1/msg.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "overlock/overlock/params.proto";

option go_package = "overlock/x/overlock/types";

// Msg defines the Msg service.
service Msg {
  option (cosmos.msg.v1.service) = true;
  
  // UpdateParams defines a (governance) operation for updating the module
  // parameters. The authority defaults to the x/gov module account.
  rpc UpdateParams        (MsgUpdateParams       ) returns (MsgUpdateParamsResponse       );
  rpc CreateConfiguration (MsgCreateConfiguration) returns (MsgCreateConfigurationResponse);
  rpc UpdateConfiguration (MsgUpdateConfiguration) returns (MsgUpdateConfigurationResponse);
  rpc DeleteConfiguration (MsgDeleteConfiguration) returns (MsgDeleteConfigurationResponse);
}
// MsgUpdateParams is the Msg/UpdateParams request type.
message MsgUpdateParams {
  option (cosmos.msg.v1.signer) =                           "authority";
  option           (amino.name) = "overlock/x/overlock/MsgUpdateParams";
  
  // authority is the address that controls the module (defaults to x/gov unless overwritten).
  string authority = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];

  // params defines the module parameters to update.
  
  // NOTE: All parameters must be supplied.
  Params params = 2 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
}

// MsgUpdateParamsResponse defines the response structure for executing a
// MsgUpdateParams message.
message MsgUpdateParamsResponse {}

message MsgCreateConfiguration {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1;
  string name    = 2;
}

message MsgCreateConfigurationResponse {
  uint64 id = 1;
}

message MsgUpdateConfiguration {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1;
  string name    = 2;
  string spec    = 3;
  uint64 id      = 4;
}

message MsgUpdateConfigurationResponse {}

message MsgDeleteConfiguration {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1;
  uint64 id      = 2;
}

message MsgDeleteConfigurationResponse {}

